# LOMO

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml  run.sh
.github/workflows/: python-publish.yml
adalomo/: README.md  README_ZH.md
adalomo/further-pretraining/: evaluate.py  train.py
adalomo/instruction-tuning/: train.py
config/: args_lomo.yaml  args_lomo_lora.yaml  ds_config.json  hf_args_zero.yaml  hf_args_zero_lora.yaml
log/: highlighter.py
lomo/: README.md  README_ZH.md
lomo/config/: args_lomo.yaml  args_lomo_lora.yaml  ds_config_lora.json
lomo/log/: logger.py  print.py
lomo/src/: lomo_lora_trainer.py  lomo_trainer.py  merge_llama_with_lora.py  mydatasets.py  train_lomo.py  train_lomo_lora.py  utils.py
lomo_optim/: __init__.py  adalomo.py  lomo.py
src/: arguments.py  inplace_zero_trainer.py  inplace_zero_trainer_lora.py  lomo.py  lomo_lora_trainer.py  lomo_trainer.py  mydatasets.py  mytrainer.py  mytrainer_lora.py  prompts.py  train_lomo.py  train_lomo_lora.py  train_zero.py  train_zero_lora.py  utils.py
